third_party/move/move-compiler-v2/tests/lambda/inline-parity/dotdot_valid.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
    ┌─ tests/lambda/inline-parity/dotdot_valid.move:181:22
    │
181 │         lambda_param(|S2(x, ..)| x)
    │                      ^^^^^^^^^^^^^
